# huffman-code

./: Cargo.toml  README.md
.devcontainer/: devcontainer.json
src/: decode.rs  encode.rs  main.rs
